# cookiecutter-fish-plugin

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: ci.yaml
fisher_abbreviations/: cookiecutter.json  hooks
fisher_abbreviations/{{ cookiecutter.project_slug }}/: .pre-commit-config.yaml  LICENSE  README.md
fisher_abbreviations/{{ cookiecutter.project_slug }}/conf.d/: {{ cookiecutter.project_slug }}.fish
fisher_abbreviations/{{ cookiecutter.project_slug }}/functions/: _{{ cookiecutter.project_slug }}_destroy.fish
fisher_basic/: cookiecutter.json
fisher_basic/hooks/: post_gen_project.py
fisher_basic/{{ cookiecutter.project_slug }}/: README.md
fisher_basic/{{ cookiecutter.project_slug }}/functions/: _{{ cookiecutter.project_slug }}_destroy.fish  _{{ cookiecutter.project_slug }}_init.fish
plugin_abbreviations/{{ cookiecutter.project_slug }}/: README.md
plugin_abbreviations/{{ cookiecutter.project_slug }}/conf.d/: {{ cookiecutter.project_slug }}.fish
plugin_abbreviations/{{ cookiecutter.project_slug }}/functions/: _{{ cookiecutter.project_slug }}_abbr.fish
plugin_basic/{{ cookiecutter.project_slug }}/: README.md
tests/: test_basic.fish  test_fisher.fish
{{ cookiecutter.project_slug }}/: README.md
{{ cookiecutter.project_slug }}/conf.d/: {{ cookiecutter.project_slug }}.fish
{{ cookiecutter.project_slug }}/functions/: _{{ cookiecutter.project_slug }}_abbr.fish  _{{ cookiecutter.project_slug }}_init.fish
{{ cookiecutter.project_slug }}/tests/: common.fish  test_plugin.fish
(+8 files in other folders)
